syntax = "proto3";
option go_package="EDA.Project.ERP.backend.register/proto/Register";
package Register;

service Register{
    rpc IsUserExist(IsUserExistRequest)returns(IsUserExistResponse){}
    rpc Register(RegisterRequest)returns(RegisterResponse){}
}

message IsUserExistRequest{
    string username = 1;
}

message IsUserExistResponse{
    bool exist = 1;
}

message RegisterRequest{
    string username = 1;
    string password = 2;
}

message RegisterResponse{
    int32 id = 1;
}

